Fixed formatting width on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,7 @@ button {
 
 .gif-wrap img {
   min-width: 100%;
+  max-width: 200px;
 }
 
 /* ================================= 
